--- a/views/add-car.ejs
+++ b/views/add-car.ejs
@@ -15,7 +15,8 @@
                     <label for="plateNumber" class="form-label fw-bold">Număr de Înmatriculare</label>
                     <div class="input-group">
                         <span class="input-group-text bg-light">
-                            <img src="/img/drapel-md.png" alt="MD" class="me-1" style="width: 20px;">                             <span class="fw-bold">MD</span>
+                            <img src="/img/drapel-md.png" alt="MD" class="me-1" style="width: 20px;">
+                            <span class="fw-bold">MD</span>
                         </span>
                         <input type="text" name="plateNumber" id="plateNumber" class="form-control form-control-lg" 
                                placeholder="Număr de Înmatriculare (Ex: ABC 123)" maxlength="7" required>
