Fix: Calea imaginii la drapel corectata.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,7 +13,7 @@
             
             <span class="input-group-text bg-transparent rounded-start-pill py-2 border-0">
                 <div class="d-flex flex-column align-items-center me-2 flag-input-box">
-                    <img src="/img/drapel-md.png" alt="MD" style="width: 25px;">
+                    <img src="/images/drapel-md.png" alt="MD" style="width: 18px;">
                     <span class="fw-bold text-dark" style="font-size: 0.7em;">MD</span>
                 </div>
             </span>
@@ -34,7 +34,7 @@
 
 <div class="cars-grid-container">
     <% if (cars.length > 0) { %>
-        <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-3 mb-5">
+        <div class="row row-cols-2 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-3 mb-5">
             <% cars.forEach(car => { %>
                 <div class="col">
                     <a href="/car/<%= car._id %>" class="text-decoration-none text-dark d-block">
@@ -46,7 +46,7 @@
                                 
                                 <div class="d-flex align-items-start">
                                     <div class="d-flex flex-column align-items-center me-2">
-                                        <img src="/img/drapel-md.png" alt="MD" style="width: 18px;">
+                                        <img src="/images/drapel-md.png" alt="MD" style="width: 18px;">
                                         <span class="fw-bold" style="font-size: 0.6em;">MD</span>
                                     </div>
                                     <div>
