Sper ca va lucra.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,7 +13,7 @@
             
             <span class="input-group-text bg-transparent rounded-start-pill py-2 border-0">
                 <div class="d-flex flex-column align-items-center me-2 flag-input-box">
-                    <img src="/img/drapel-md.png" alt="MD" style="width: 10px;">
+                    <img src="/images/drapel-md.png" alt="MD" style="width: 25px;">
                     <span class="fw-bold text-dark" style="font-size: 0.7em;">MD</span>
                 </div>
             </span>
@@ -46,7 +46,7 @@
                                 
                                 <div class="d-flex align-items-start">
                                     <div class="d-flex flex-column align-items-center me-2">
-                                        <img src="/img/drapel-md.png" alt="MD" style="width: 10px;">
+                                        <img src="/images/drapel-md.png" alt="MD" style="width: 18px;">
                                         <span class="fw-bold" style="font-size: 0.6em;">MD</span>
                                     </div>
                                     <div>
