--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -8,7 +8,7 @@
             <div class="row row-cols-2 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-3 mb-5">
                 <% cars.forEach(car => { %>
                     <div class="col">
-                        <div class="card shadow-sm h-100 border-0 overflow-hidden car-no-action">
+                        <div class="card shadow-sm h-100 border-0 car-no-action">
                             <img src="<%= car.imageUrls[0] %>" class="card-img-top" alt="<%= car.make %> <%= car.model %>" style="height: 100px; object-fit: cover;">
                             <div class="card-body p-2">
                                 <div class="d-flex align-items-start">
