--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -13,7 +13,7 @@
                             <div class="card-body p-2">
                                 <div class="d-flex align-items-start">
                                     <div class="d-flex flex-column align-items-center me-2">
-                                        <img src="/images/drapel-md.png" alt="MD" style="width: 18px;">
+                                        <img src="/img/drapel-md.png" class="flag-icon me-1">
                                         <span class="fw-bold" style="font-size: 0.6em;">MD</span>
                                     </div>
                                     <div>
